--- a/donglan/build.gradle
+++ b/donglan/build.gradle
@@ -19,12 +19,12 @@ android {
     signingConfigs {
         config {
             keyPassword 'donglanyg'
-            storeFile file('D:/key.jks')
+            storeFile file('/key.jks')
             storePassword 'donglanyg'
             keyAlias 'key0'
         }
         debug {
-            storeFile file('D:/key.jks')
+            storeFile file('/key.jks')
             storePassword 'donglanyg'
             keyAlias 'key0'
             keyPassword 'donglanyg'
@@ -39,8 +39,8 @@ android {
         applicationId "com.cn.danceland.myapplication"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 17
-        versionName "2.1.2"
+        versionCode 18
+        versionName "2.1.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.config
         multiDexEnabled true
